--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "graphql-tag": "^2.10.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-dropdown": "^1.7.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-virtualized": "^9.21.2",
     "typescript": "^3.7.5"
   },
   "scripts": {
