--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@apollo/react-hooks": "^3.1.5",
     "@material-ui/core": "^4.9.11",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
@@ -18,9 +19,11 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-dropdown": "^1.7.0",
+    "react-loading": "^2.0.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-virtualized": "^9.21.2",
+    "recharts": "^1.8.5",
     "typescript": "^3.7.5"
   },
   "scripts": {
