--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@types/react": "^16.9.22",
     "@types/react-dom": "^16.9.5",
     "apollo-boost": "^0.4.7",
+    "clsx": "^1.1.0",
     "graphql": "^15.0.0",
     "graphql-tag": "^2.10.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-dropdown": "^1.7.0",
     "react-loading": "^2.0.3",
+    "react-mathjax": "^1.0.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-virtualized": "^9.21.2",
