--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clsx": "^1.1.0",
     "graphql": "^15.0.0",
     "graphql-tag": "^2.10.3",
+    "lodash": "^4.17.20",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-dropdown": "^1.7.0",
@@ -48,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.165"
   }
 }
